# drop_this.rs

./: CHANGELOG.md  Cargo.toml  README.md  gen_code.py
src/: lib.rs
